--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-radiate - utomated internet radio
+radiate - automated internet radio
 
 Currentlyt this project is very inflexible and undocumented.  I'm writing it
 for an internet radio station that I'm working on.
