fix another typeo in README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 radiate - automated internet radio
 
-Currentlyt this project is very inflexible and undocumented.  I'm writing it
+Currently this project is very inflexible and undocumented.  I'm writing it
 for an internet radio station that I'm working on.
 
 What each file does:
